--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 
   <title>Coding Template</title>
   <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"-->
-  <link rel="stylesheet" type="text/css" href="bundle.css"><link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
@@ -26,7 +27,7 @@
 </head>
 
 <body class="bg" data-spy="scroll" data-target=".navbar" data-offset="50">
-  <div id="holder"></div>
+  <div id="holder">
   <header class="container clearfix align-middle">
       <div id="logo-holder" class="float-left"></div>
       <div class="h2 main-title mx-auto"></div>
@@ -77,10 +78,10 @@
       </div>
     </div>
   </div>
-
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <!--script src="bundle.js"></script-->
+  <script src="main.bundle.js"></script>
 </body>
 </html>
