--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Coding Template</title>
@@ -26,11 +26,11 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="bg" data-spy="scroll" data-target=".navbar" data-offset="50">
+<!--body data-spy="scroll" data-target=".navbar" data-offset="1550">
   <div id="holder">
   <header class="container clearfix align-middle">
       <div id="logo-holder" class="float-left"></div>
-      <div class="h2 main-title mx-auto"></div>
+      <div class="h2 main-title mx-auto">Thought Render</div>
   </header>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
       <a class="navbar-brand" href="#"></a>
@@ -63,22 +63,25 @@
         </ul>
       </div>
   </nav>
-  <div id="content"></div>
-  <div class="container">
-  
-    <div class="row">
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <div class="col-sm">
-        One of three columns
+  <div class="container-fluid" id="content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
       </div>
     </div>
   </div>
-  </div>
+  
+  </div-->
+<body>
+  <app></app>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
