added interface skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,15 @@
   
 
 <div id="holder" class="container-fluid invisible">
+  <intro></intro>
+
+  <div id="interface" class="container-fluid">
+   
+  </div>
+
   <div id="fullCover" class="container-fluid"></div>
   <content class="container-fluid">
     <!--navigation-->
-    
-    <app></app>
     <section id="overview-top" class="container d-none">
       <div class="section-title text-center">Overview</div>
       <p>My name is Deriv Diggs and I'm the founder and chief engineer of Thought Render. I've been creating websites,
