tested media queries

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
   <content class="container-fluid">
     <!--navigation-->
     <section id="overview-top" class="container d-none">
-      <div class="section-title text-center">Overview</div>
+      <h1 class="section-title text-center">Overview</h1>
       <p>My name is Deriv Diggs and I'm the founder and chief engineer of Thought Render. I've been creating websites,
         RIAs, kiosks, desktop applications, games, and mobile applications using Adobe AIR/Flash/Flex/Flash
         Builder/HTML5/CSS3/Javascript. Twelve years ago, before focusing on development, I was a senior designer at
