--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,9 @@
     <!--navigation-->
     <section id="overview-top" class="container d-none">
       <h1 class="section-title text-center">Overview</h1>
-      <p>My name is Deriv Diggs and I'm the founder and chief engineer of Thought Render. I've been creating websites,
+      <h2 class="section-title text-center">Overview</h2>
+      <h3 class="section-title text-center">Overview</h3>
+      <p class="test-justify">My name is Deriv Diggs and I'm the founder and chief engineer of Thought Render. I've been creating websites,
         RIAs, kiosks, desktop applications, games, and mobile applications using Adobe AIR/Flash/Flex/Flash
         Builder/HTML5/CSS3/Javascript. Twelve years ago, before focusing on development, I was a senior designer at
         Grey Interactive (at the time the interactive division of Grey Advertising) in New York City. Therefore, in
@@ -58,7 +60,7 @@
         especially Photoshop, Illustrator, Flash and Dreamweaver. I won the Adobe Site of the Day award for April
         11, 2009.
       </p>
-      <p>My extensive knowlege of both Flash and Jquery/Javascript, gives me the ablitiy to turn your Flash projects
+      <p class="jura">My extensive knowlege of both Flash and Jquery/Javascript, gives me the ablitiy to turn your Flash projects
         into html5 without loosing effects or functionality. I can also use Flash to change your web applications
         into native applications for the desktop and for mobile devices.</p>
       <p>In addition to front end technologies, I have experience programming php, Python, and mySQL, and have
