fixed opacity and top equation for scroll-control

--- a/src/index.html
+++ b/src/index.html
@@ -84,11 +84,13 @@
 
 
         <!--animation screen-->
-        <div id="g1" class="grp1 text-center d-block rel">
-          <h4 id="g1l1" class="txt-b4 mb-3 not-set">Thought Render</h3>
-            <h1 id="g1l2" class="txt-b4 mt-n2 not-set">Do you make excuses...</h1>
-            <h1 id="g1l3" class="txt-b4 not-set">When asked about your website?</h1>
-            <h5 id="g1l4" class="txt-b4 mt-5 not-set">Websites Starting at $999.</h2>
+        <div id="g1" class="grp1 text-center d-block">
+          <div id="g1l1">Thought Render</div>
+            <h2 id="g1l2">Do you make excuses...</h2>
+            <h1 id="g1l3">When asked about</h1>
+            <h1 id="g1l4">your website?</h1>
+
+            <h4 id="g1l5">Websites Starting at $999.</h4>
         </div>
         <!--animation screen-->
         <div id="g2" class="grp2 d-block text-center d-none">
