added profile pic

--- a/src/index.html
+++ b/src/index.html
@@ -99,22 +99,29 @@
           <div id="g2l1">Leverage over</div>
           <h1 id="g2l2">20yrs</h3>
             <h2 id="g2l3">Experience. Complete</h2>
-              <h3 id="g2l4">tailored online identity packages.</h3>
-              <h3 id="g2l5">Look for excuses to bring up your</h3>
-              <h2 id="g2l6">brand new WEBSITE.</h2>
+            <h3 id="g2l4">tailored online identity packages.</h3>
+            <h3 id="g2l5">Look for excuses to bring up your</h3>
+            <h2 id="g2l6">brand new WEBSITE.</h2>
         </div>
 
     </section>
     <section id="overview-top" class="container-fluid">
-      <h1 class="section-title text-center">Overview</h1>
-      <p>My name is Deriv Diggs and I'm the founder and chief engineer of Thought Render. I've been creating websites,
+      <h1 class="section-title text-center mb-5">Overview</h1>
+      <div class="media mt-3">
+        <a id="profile-pic-holder" class="pr-3" href="#">
+          <!--img src="../img/deriv.jpg" alt="Generic placeholder image"-->
+        </a>
+        <div class="media-body">
+          <h5 class="mt-0">CEO: Deriv Diggs</h5>
+          My name is Deriv Diggs and I'm the founder and chief engineer of Thought Render. I've been creating websites,
         RIAs, kiosks, desktop applications, games, and mobile applications using Adobe AIR/Flash/Flex/Flash
         Builder/HTML5/CSS3/Javascript. Twelve years ago, before focusing on development, I was a senior designer at
         Grey Interactive (at the time the interactive division of Grey Advertising) in New York City. Therefore, in
         addition to my skills as a programmer, I'm extremely proficient with the entire Adobe CS suite of programs
         especially Photoshop, Illustrator, Flash and Dreamweaver. I won the Adobe Site of the Day award for April
         11, 2009.
-      </p>
+        </div>
+      </div>
       <p>My extensive knowlege of both Flash and Jquery/Javascript, gives me the ablitiy to turn your Flash projects
         into html5 without loosing effects or functionality. I can also use Flash to change your web applications
         into native applications for the desktop and for mobile devices.</p>
@@ -125,10 +132,10 @@
       </p>
     </section>
     <section id="technology" class="container-fluid">
-      <h1 class="section-title text-center">Technologies</h1>
+      <h1 class="section-title text-center mb-5">Technologies</h1>
       <div id="technology-table" class="row">
         <div class="col-sm">
-          <div class="technology-title text-center">Languages</div>
+          <div class="technology-title text-center mb-2">Languages</div>
           <ul class="list-group">
             <li class="list-group-item list-group-item-action">ActionScript 2</li>
             <li class="list-group-item list-group-item-action">ActionScript 3</li>
@@ -141,7 +148,7 @@
           </ul>
         </div>
         <div class="col-sm">
-          <div class="technology-title text-center">Environments</div>
+          <div class="technology-title text-center mb-2">Environments</div>
           <ul class="list-group">
             <li class="list-group-item list-group-item-action">WebPack</li>
             <li class="list-group-item list-group-item-action">Grunt</li>
@@ -150,7 +157,7 @@
           </ul>
         </div>
         <div class="col-sm">
-          <div class="technology-title text-center">Software</div>
+          <div class="technology-title text-center mb-2">Software</div>
           <ul class="list-group">
             <li class="list-group-item list-group-item-action">Visual Studio Code</li>
             <li class="list-group-item list-group-item-action">Adobe Photoshop</li>
@@ -159,54 +166,8 @@
         </div>
       </div>
     </section>
-    <section id="portfolio-top" class="container invisible">
-      <div class="section-title text-center">Portfolio</div>
-      <!--div id="screen-cover"></div-->
-      <div class="medium-holder" id='medium-holder'>
-        <!--div class="medium-title">Multimedia</div>
-              <div class="portfolio-medium">
-                  <div id="multi-thumbs" class="thumb-strip"></div>
-              </div>
-          </div-->
-        <!-- The Modal -->
-      </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Illustrations</div>
-      </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Photography</div>
-      </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Music</div>
-      </div>
-
-      <div class="modal fade" id="myModal">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-
-            <!-- Modal Header -->
-            <div class="modal-header">
-              <h4 class="modal-title" id="modal-title"></h4>
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-
-            <!-- Modal body  -->
-            <div id="#test" class="modal-body">
-
-              </div-->
-
-              <!-- Modal footer -->
-              <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="resume-top" class="container d-none">
-      <div class="section-title text-center">Resume</div>
+    <section id="resume-top" class="container-fluid">
+      <h1 class="section-title text-center">Resume</h1>
 
       <p><a href="http://thoughtrender.com/interactive/docs/Resume_of_Deriv_Diggs.pdf">You can click here to download
           a PDF file containing additonal experience.</a>
@@ -222,21 +183,21 @@
           <span class="p-tel">908-938-6936</span>
         </p>
         <h2>Summary</h2>
-        <p class='p-summary'>Development of RIAs, widgets, desk-top applications, kiosks, and web based
-          applications.
-          Leverage technologies such as <span class="p-skill">ActionScript 2</span> / <span class="p-skill">ActionScript
-            3</span> within <span class="p-skill">Flash</span> and <span class="p-skill">Flash Builder</span> (<span
-            class="p-skill">Flex</span>), <span class="p-skill">MDM
-            Zinc</span>, <span class="p-skill">SHU</span>, and <span class="p-skill">Adobe AIR</span>.
-          Development of scalable, optimized websites using <span class="p-skill">HTML5</span>, <span
-            class="p-skill">Javascript</span>, <span class="p-skill">jQuery</span>, <span class="p-skill">CSS3</span>,
-          <span class="p-skill">PHP</span> and <span class="p-skill">MySQL</span>. Experience with <span
-            class="p-skill">CMS</span>s including <span class="p-skill">Wordpress</span> as well as custom CMSs. Over
-          10years of Adobe CS Suite experience
-          with expertise in <span class="p-skill">Flash</span>, <span class="p-skill">Photoshop</span>, <span
-            class="p-skill">Dreamweaver</span> and <span class="p-skill">Illustrator</span>. Excellent problem
-          solving and adaptation to new resources and ideas. Strong communication, initiative, leadership, and
-          focus.</p>
+        <p class='p-summary'>Over 2 decades of evolving multimedia experience both designing and programing meaningful
+          visual experiences with a strong focus in balancing usability with original experiences. For example, my
+          design and animations for Sawaya Segalas which were recognized by Adobe who awarded myself as the lead, and my
+          team when I was at Temel Inc The Adobe Site of the day Award. Another example was my work for a Cover Girl
+          email campaign that received over one million impressions – which was an interactive mandala unique to the
+          name of each recipient.
+          Excellent communication to easily interact with clients and team members of various disciplines. Most
+          importantly, the ability to be open to and thereby learn from anyone that I can. My motto is, “tell me how I
+          may do better“ and I leave my ego for when I make music.
+          Expert level <span class="p-skill">Photoshop</span> and <span class="p-skill">Illustrator</span> skills that I
+          can easily translate into standardize <span class="p-skill">typescript</span>/<span
+            class="p-skill">javascript</span> for any marketing need. Currently rounding out my skills as a <span
+            class="p-skill">Full-Stack</span> developer specializing in <span class="p-skill">Apache</span>/<span
+            class="p-skill">PHP</span>/<span class="p-skill">MySQL</span> and <span class="p-skill">Node.js</span>/<span
+            class="p-skill">Mongo</span> db.</p>
         <h2>Experience</h2>
         <!--- a job -->
         <div class='p-experience h-event'>
@@ -479,9 +440,55 @@
           <!-- end jobs -->
         </div>
     </section>
-    <section id="contact-top" class="container d-none">
-      <div class="section-title text-center">Contact Information</div>
+    <section id="portfolio-top" class="container-fluid">
+      <h1 class="section-title text-center">Portfolio</h1>
+      <!--div id="screen-cover"></div-->
+      <iframe width="1050" height="600" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="medium-holder" id='medium-holder'>
+        <!--div class="medium-title">Multimedia</div>
+              <div class="portfolio-medium">
+                  <div id="multi-thumbs" class="thumb-strip"></div>
+              </div>
+          </div-->
+        <!-- The Modal -->
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Illustrations</div>
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Photography</div>
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Music</div>
+      </div>
 
+      <div class="modal fade" id="myModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title" id="modal-title"></h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body  -->
+            <div id="#test" class="modal-body">
+
+              </div-->
+
+              <!-- Modal footer -->
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact-top" class="container-fluid">
+      <h1 class="section-title text-center">Contact Information</h1>
       <div class='underholder'>
         <h2>Mailing Address</h2>
         <div class="vcard">
