fixed horizontal scrolling city

--- a/src/index.html
+++ b/src/index.html
@@ -167,6 +167,7 @@
       </div>
     </section>
     <section id="resume-top" class="container-fluid">
+      <!--div id="nyc-long"></div-->
       <h1 class="section-title text-center">Resume</h1>
 
       <p><a href="http://thoughtrender.com/interactive/docs/Resume_of_Deriv_Diggs.pdf">You can click here to download
