--- a/src/index.html
+++ b/src/index.html
@@ -446,7 +446,9 @@
       <!--div id="screen-cover"></div-->
       <iframe width="1050" height="600" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <div class="medium-holder" id='medium-holder'>
+      <div class="medium-holder container-fluid" id='medium-holder'>
+        <div id="vid-holder" class="container">
+        
         <!--div class="medium-title">Multimedia</div>
               <div class="portfolio-medium">
                   <div id="multi-thumbs" class="thumb-strip"></div>
@@ -471,17 +473,19 @@
             <!-- Modal Header -->
             <div class="modal-header">
               <h4 class="modal-title" id="modal-title"></h4>
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
 
             <!-- Modal body  -->
             <div id="#test" class="modal-body">
 
-              </div-->
+              </div>
 
               <!-- Modal footer -->
               <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
