--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <!--navigation-->
-  <div id="holder" class="container-fluid" data-spy="scroll" data-target=".navbar" data-offset="100">
+  <div id="holder" class="container" data-spy="scroll" data-target=".navbar" data-offset="100">
     <section id="cityscape" class="container d-none"></section>
     <section id="intro-bk" class="container-fluid">
 
@@ -446,7 +446,7 @@
       <!--div id="screen-cover"></div-->
       <iframe width="1050" height="600" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <div class="medium-holder container-fluid text-center" id='medium-holder'>
+      <div class="medium-holder container text-center" id='medium-holder'>
         <div id="vid-holder" class="container">
         
         <!--div class="medium-title">Multimedia</div>
