fixed spacing  in portfolio grid

--- a/src/index.html
+++ b/src/index.html
@@ -441,7 +441,7 @@
           <!-- end jobs -->
         </div>
     </section>
-    <section id="portfolio-top" class="container-fluid">
+    <section id="portfolio-top">
       <h1 class="section-title text-center">Portfolio</h1>
       <!--div id="screen-cover"></div-->
       <iframe width="1050" height="600" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
