--- a/src/index.html
+++ b/src/index.html
@@ -440,19 +440,7 @@
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <div class="medium-holder container text-center" id='medium-holder'>
         <div id="vid-holder" class="container">
-
-
         </div>
-        <div class="portfolio-medium">
-          <div class="medium-title">Illustrations</div>
-        </div>
-        <div class="portfolio-medium">
-          <div class="medium-title">Photography</div>
-        </div>
-        <div class="portfolio-medium">
-          <div class="medium-title">Music</div>
-        </div>
-
         <div class="modal fade" id="myModal">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -474,6 +462,125 @@
             </div>
           </div>
         </div>
+        
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Illustrations</div>
+        <div id="carouselExampleIndicators" class="carousel slide w-50" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          </ol>
+          <div id="photo-carousel" class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./img/ann1000.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/jes1000.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/dim1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/tam1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/big1000.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Photography</div>
+        <div id="carouselExampleIndicators-2" class="carousel slide w-50 carousel-fade" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators-2" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators-2" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators-2" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators-2" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators-2" data-slide-to="4"></li>
+          </ol>
+          <div id="photo-carousel" class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./img/fl1000.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/ice_prints1000.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/blossom1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/heart1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/clovedit1000.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators-2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators-2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Graphic Arts</div>
+        <div id="carouselExampleIndicators-3" class="carousel slide w-50" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="5"></li>
+          </ol>
+          <div id="photo-carousel" class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./img/pp1000.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/dandy21000.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/jupfl1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/fl_mos1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/mono1000.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/rm1000.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators-3" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators-3" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="portfolio-medium">
+        <div class="medium-title">Music</div>
       </div>
     </section>
     <section id="contact-top" class="container-fluid">
