--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
 <body>
 
 
-  <!--navigation-->
+  <!--begin navigation-->
 
   <div id="nav-holder" class="container">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
       <div id="logo-holder" class="float-left d-inline"></div>
       <a class="navbar-brand" href="#">Thought Render</a>
       <button class="clear-fix float-right navbar-toggler" type="button" data-toggle="collapse"
@@ -50,17 +50,21 @@
             <div class="dropdown-menu">
               <a class="dropdown-item" href="#overview-top">Overview</a>
               <a class="dropdown-item" href="#technology">Technologies</a>
-              <a class="dropdown-item" href="#resume">Resume</a>
+              <a class="dropdown-item" href="#resume-top">Resume</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbardrop2" data-toggle="dropdown" role="button"
               aria-haspopup="true" aria-expanded="false">Portfolio</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#multimedia">Multi-Media</a>
+              <a class="dropdown-item" href="#portfolio-top">Media Reel</a>
+              <a class="dropdown-item" href="#multimedia">Multimedia</a>
               <a class="dropdown-item" href="#illustrations">Illustrations</a>
               <a class="dropdown-item" href="#photography">Photography</a>
+              <a class="dropdown-item" href="#graphic-arts">Graphic Arts</a>
+              <a class="dropdown-item" href="#biz-graphics">Biz Graphics</a>
               <a class="dropdown-item" href="#music">Music</a>
+              <a class="dropdown-item" href="#sites">Live Sites</a>
             </div>
           </li>
           <li class="nav-item">
@@ -70,38 +74,32 @@
       </div>
     </nav>
   </div>
-
-  <!--navigation-->
+  <!--end navigation-->
   <div id="holder" class="container" data-spy="scroll" data-target=".navbar" data-offset="100">
     <section id="cityscape" class="container d-none"></section>
     <section id="intro-bk" class="container-fluid">
-
       <div id="logo-intro">
         <div id="bigLogoHolder"></div>
-
         <div id="fullCover"></div>
-
-
         <div id="g1" class="text-center d-block">
-          <div id="g1l1">Thought Render</div>
+          <h3 id="g1l1">Thought Render</h3>
           <h2 id="g1l2">Do you make excuses...</h2>
           <h1 id="g1l3">When asked about</h1>
           <h1 id="g1l4">your website?</h1>
-
           <h4 id="g1l5">Websites Starting at $999.</h4>
         </div>
         <div id="g2" class="d-block text-center">
-          <div id="g2l1">Leverage over</div>
-          <h1 id="g2l2">20yrs</h3>
-            <h2 id="g2l3">Experience. Complete</h2>
-            <h3 id="g2l4">tailored online identity packages.</h3>
-            <h3 id="g2l5">Look for excuses to bring up your</h3>
-            <h2 id="g2l6">brand new WEBSITE.</h2>
+          <h3 id="g2l1">Leverage over</h3>
+          <h2 id="g2l2">20yrs Experience.</h2>
+            <h3 id="g2l3">Complete, custom, online</h3>
+            <h3 id="g2l4">identity packages.</h3>
+            <h3 id="g2l5" class="mt-3">Look for excuses to bring up</h3>
+            <h2 id="g2l6" class="mt-3">your new WEBSITE.</h2>
         </div>
       </div>
     </section>
-    <section id="overview-top mt-5" class="container">
-      <h1 class="section-title text-center mb-5">Overview</h1>
+    <section id="overview-top" class="container-fluid">
+      <h1 class="section-title text-center my-5">Overview</h1>
       <div id="overview-top-row" class="row mt-3">
         <div id="profile-pic-holder" class="col-5">
         </div>
@@ -135,8 +133,8 @@
         </div>
       </div>
     </section>
-    <section id="technology" class="container-fluid pt-5">
-      <h1 class="section-title text-center mb-5">Technologies</h1>
+    <section id="technology" class="container-fluid">
+      <h1 class="section-title text-center my-5">Technologies</h1>
       <div id="technology-table" class="row">
         <div class="col-sm">
           <div class="technology-title text-center mb-2">Languages</div>
@@ -171,8 +169,7 @@
       </div>
     </section>
     <section id="resume-top" class="container-fluid">
-      <h1 class="section-title text-center">Resume</h1>
-
+      <h1 class="section-title text-center my-5">Resume</h1>
       <p><a href="http://thoughtrender.com/interactive/docs/Resume_of_Deriv_Diggs.pdf">You can click here to download
           a PDF file containing additonal experience.</a>
       <p>
@@ -452,42 +449,37 @@
                 Pantene.</li>
             </ul>
           </div>
-
         </div>
     </section>
-    <section id="portfolio-top">
-      <h1 class="section-title text-center">Portfolio</h1>
+    <section id="portfolio-top" class="my-5">
+      <h1 class="section-title text-center my-5">Portfolio</h1>
       <iframe width="1050" height="600" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <div class="medium-holder container text-center" id='medium-holder'>
+        <div class="medium-holder container text-center mt-5" id='multimedia'>
+          <div class="head-space"></div>
         <div id="vid-holder" class="container">
         </div>
         <div class="modal fade" id="myModal">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
-
               <div class="modal-header">
                 <h4 class="modal-title" id="modal-title"></h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-
-              <div id="#test" class="modal-body">
-
-              </div>
-
+              <div id="#test" class="modal-body"></div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
         </div>
-        
       </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Illustrations</div>
-        <div id="carouselExampleIndicators" class="carousel slide w-50" data-ride="carousel">
+      <div id="illustrations" class="portfolio-medium">
+        <div class="head-space"></div>
+        <h5 class="medium-title text-center">Illustrations</h5>
+        <div id="carouselExampleIndicators" class="carousel slide w-50 mx-auto" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -506,10 +498,10 @@
               <img class="d-block w-100" src="./img/dim1000.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/tam1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/tam1000.jpg" alt="Forth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/big1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/big1000.jpg" alt="Fifth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -522,9 +514,10 @@
           </a>
         </div>
       </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Photography</div>
-        <div id="carouselExampleIndicators-2" class="carousel slide w-50 carousel-fade" data-ride="carousel">
+      <div id="photography" class="portfolio-medium">
+        <div class="head-space"></div>
+        <h5 class="medium-title text-center">Photography</h5>
+        <div id="carouselExampleIndicators-2" class="carousel slide w-50 mx-auto carousel-fade" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators-2" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators-2" data-slide-to="1"></li>
@@ -542,19 +535,19 @@
               <img class="d-block w-100" src="./img/daff1000.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/fl31000.jpg" alt="Second slide">
+              <img class="d-block w-100" src="./img/fl31000.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/ice_prints1000.jpg" alt="Second slide">
+              <img class="d-block w-100" src="./img/ice_prints1000.jpg" alt="Forth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/blossom1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/blossom1000.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/heart1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/heart1000.jpg" alt="Sixth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/clovedit1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/clovedit1000.jpg" alt="Seventh slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators-2" role="button" data-slide="prev">
@@ -567,9 +560,10 @@
           </a>
         </div>
       </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Graphic Arts</div>
-        <div id="carouselExampleIndicators-3" class="carousel slide w-50" data-ride="carousel">
+      <div id="graphic-arts" class="portfolio-medium">
+        <div class="head-space"></div>
+        <h5 class="medium-title text-center">Graphic Arts</h5>
+        <div id="carouselExampleIndicators-3" class="carousel slide w-50 mx-auto" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators-3" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators-3" data-slide-to="1"></li>
@@ -577,6 +571,7 @@
             <li data-target="#carouselExampleIndicators-3" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators-3" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators-3" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators-3" data-slide-to="6"></li>
           </ol>
           <div id="photo-carousel" class="carousel-inner">
             <div class="carousel-item active">
@@ -589,13 +584,16 @@
               <img class="d-block w-100" src="./img/jupfl1000.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/fl_mos1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/fl_mos1000.jpg" alt="Forth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/mono1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/mono1000.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="./img/rm1000.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/rm1000.jpg" alt="Sixth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/caveman1000.jpg" alt="Seventh slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators-3" role="button" data-slide="prev">
@@ -608,9 +606,10 @@
           </a>
         </div>
       </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Business Graphics</div>
-        <div id="carouselExampleIndicators-3" class="carousel slide w-50 carousel-fade" data-ride="carousel">
+      <div id="biz-graphics" class="portfolio-medium">
+        <div class="head-space"></div>
+        <h5 class="medium-title text-center">Business Graphics</h5>
+        <div id="carouselExampleIndicators-3" class="carousel slide w-50 mx-auto carousel-fade" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators-4" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators-4" data-slide-to="1"></li>
@@ -618,6 +617,7 @@
             <li data-target="#carouselExampleIndicators-4" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators-4" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators-4" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators-4" data-slide-to="6"></li>
           </ol>
           <div id="photo-carousel" class="carousel-inner">
             <div class="carousel-item active">
@@ -638,6 +638,9 @@
             <div class="carousel-item">
               <img class="d-block w-100" src="./img/dggz_logo1000.jpg" alt="Sixth slide">
             </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/knotty1000.jpg" alt="Seventh slide">
+            </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators-4" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -649,12 +652,42 @@
           </a>
         </div>
       </div>
-      <div class="portfolio-medium">
-        <div class="medium-title">Music</div>
+      <div id="music" class="portfolio-medium">
+        <div class="head-space"></div>
+        <h5 class="medium-title text-center">Music</h5>
+        <iframe frameborder="no" height="305" src="https://www.junodownload.com/player-embed/133a5dfe005c8d3eed4eb3f9938082fe/?pl=true&pn=false&pl-url=https%3A%2F%2Fwww.junodownload.com%2Fplaylists%2Fdynamic%2Fartist%2Fartist_7080d31dd069400f72c8121801bcafca%2Fnewest%2F50.xspf&jd=true" scrolling="no" width="100%"></iframe>
+      </div>
+      <div id="sites" class="portfolio-medium">
+        <div class="head-space"></div>
+        <h5 class="medium-title text-center">Live Sites</h5>
+        <div class="card mx-auto mt-3" style="width: 18rem;">
+          <img class="card-img-top" src="./img/knottycard.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Knotty Customs</h5>
+            <p class="card-text">Designed logo and Wordpress site for this Arizona based custom furniture creator.</p>
+            <a href="http://knottycustoms.com" target="_blank" class="card-link">Visit Site</a>
+          </div>
+        </div>
+        <div class="card mx-auto mt-3" style="width: 18rem;">
+          <img class="card-img-top" src="./img/thrmusic.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Thought Render Music</h5>
+            <p class="card-text">Designed logo and custom site for this independent record label I also manage.</p>
+            <a href="http://thoughtrender.com/music" target="_blank" class="card-link">Visit Site</a>
+          </div>
+        </div>
+        <div class="card mx-auto mt-3" style="width: 18rem;">
+          <img class="card-img-top" src="./img/shop.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Shopt Thought Render</h5>
+            <p class="card-text">Designed Wordpress site with shopping cart in order to sell various types of merchandise.</p>
+            <a href="http://shop.thoughtrender.com" target="_blank" class="card-link">Visit Site</a>
+          </div>
+        </div>
       </div>
     </section>
     <section id="contact-top" class="container-fluid">
-      <h1 class="section-title text-center">Contact Information</h1>
+      <h1 class="section-title text-center my-5">Contact Information</h1>
       <div class='underholder'>
         <h5>Mailing Address</h5>
         <div class="vcard">
@@ -669,8 +702,8 @@
           <a class="email" href="mailto:inquiries@thoughtrender.com">inquiries@thoughtrender.com</a>
         </div>
     </section>
+    <div class="head-space"></div>
   </div>
   <script src="main.bundle.js"></script>
 </body>
-
 </html>
