added github link

--- a/src/index.html
+++ b/src/index.html
@@ -675,9 +675,17 @@
         <div class="card mx-auto mt-3" style="width: 18rem;">
           <img class="card-img-top" src="./img/shop.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Shopt Thought Render</h5>
+            <h5 class="card-title">Shop Thought Render</h5>
             <p class="card-text">Designed Wordpress site with shopping cart in order to sell various types of merchandise.</p>
             <a href="http://shop.thoughtrender.com" target="_blank" class="card-link">Visit Site</a>
+          </div>
+        </div>
+        <div class="card mx-auto mt-3" style="width: 18rem;">
+          <img class="card-img-top" src="./img/github.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Code on GitHub</h5>
+            <p class="card-text">Take a look at the code used in creating this website. Note the custom made libraries I created for displaying the multimedia section (called 'Gallery Strip Modal') as well as the utilities used to display the first two introductory screens ('dUtils').</p>
+            <a href="https://github.com/hidmantra/webpack-ts-template/tree/dev" target="_blank" class="card-link">Visit Site</a>
           </div>
         </div>
       </div>
