--- a/src/index.html
+++ b/src/index.html
@@ -455,9 +455,9 @@
     </section>
     <section id="portfolio-top" class="my-5">
       <h1 class="section-title text-center my-5">Portfolio</h1>
-      <iframe width="1050" height="600" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
+      <iframe id="youtube-port" src="https://www.youtube.com/embed/hQnYo3EmNcY" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <div class="medium-holder container text-center mt-5" id='multimedia'>
+      <div class="medium-holder container text-center mt-5 d-none d-sm-block" id='multimedia'>
         <div class="head-space"></div>
         <div id="vid-holder" class="container">
         </div>
